fix dates/times, fix issues in admin pane, tests, and more